--- a/Resume Generator cshrp/Resume Generator cshrp.csproj
+++ b/Resume Generator cshrp/Resume Generator cshrp.csproj
@@ -9,4 +9,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PdfSharp" Version="1.50.5147" />
+  </ItemGroup>
+
 </Project>
